--- a/tarefas.css
+++ b/tarefas.css
@@ -16,6 +16,7 @@ body{
     display: flex;
     flex-direction: column;
     background-color: lightblue;
+    height: auto;
 }  
 
 h1{
@@ -43,30 +44,77 @@ input{
 
 .subtarefa{
     margin: var(--margin);
+    height: auto;
 }
 
-button {
+form .add {
     width: 90%;
     align-self: center; 
     background-color: greenyellow;
     padding: 10px;
+    margin-left: 30px;
+    height: 40%;
 }
 
-ul{
-    display: flex;
-    flex-flow: row wrap;
-    border: 1px solid blue;
-    margin: auto auto;
-    list-style-type: none;
-    width: 98%;
-    padding-top: 40px;
-}
-
-li{
+.showtask{
     background-color: white;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     height: 60px;
+    width: 100%;
+    margin-bottom: 3%;
+    margin-top: 2%;
+}
+
+.title{
+    flex: 30%;
+    border: 2px solid red;
+    height: 100%;
+    align-content: center;
+}
+
+.description{
+    flex: 35%;
+    border: 2px solid green;
+    height: 100%;
+}
+
+.sub{
+    flex: 30%;
+    border: 2px solid cyan;
+}
+
+.nome{
+    margin-left: 40px;
+    align-self: center;
+    margin-top: 10px;
+    font-size: 24px;
+}
+
+.dc{
+    font-size: 18px;
+}
+
+.botoes{
+    flex: 15%;
+    display: flex;
+}
+
+.delete{
+    background-color: red;
+    color: white;
+    width: 50%;
+    height: 60px;
+    border: 0;
+}
+
+.finished{
+    background-color: greenyellow;
+    color: white;
+    width: 50%;
+    height: 60px;
+    font-size: 11px;
+    border: 0;
 }
